# micro-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml  rust-clippy.yml
grpc-app/: Cargo.toml  README.md  buf.yaml  build.rs
grpc-app/proto/app/: app.proto
grpc-app/src/: cli.rs  main.rs  service.rs
openapi-app/: Cargo.toml  README.md
openapi-app/src/: main.rs
saas/: Cargo.toml
saas/src/: main.rs  object.rs  store.rs
src/: cli.rs  main.rs  service.rs
