[package]
name = "micro-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.14", features = ["derive","env"] }
tokio = { version = "1.18.0", features = ["full"] }
env_logger = "0.9.0"
log = "0.4.16"
anyhow = "1.0.57"
tonic = "0.7.1"
prost = "0.10.1"
tonic-reflection = "0.4.0"
hyper = { version = "0.14.18", features = ["full"] }

[build-dependencies]
tonic-build = "0.7.1"
