[package]
name = "grpc-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.14", features = ["derive","env"] }
env_logger = "0.9.0"
hyper = { version = "0.14.18", features = ["full"] }
log = "0.4.16"
prost = "0.10.1"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.18.0", features = ["full"] }
tonic = "0.7.1"
tonic-reflection = "0.4.0"


[build-dependencies]
tonic-build = "0.7.1"
